# MCP_Agent

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
schemas/: ir.schema.json  tool-manifest.schema.json
src/mcpgen/: __main__.py  generator.py  ir.py  parser.py  transformer.py  validator.py
